--- a/coupons/css/mycss.css
+++ b/coupons/css/mycss.css
@@ -5,7 +5,8 @@
 } */
 
 .bg-menu {
-  background-color:#719a8b;;
+  background-color: #719a8b;
+  ;
   background-size: cover;
 }
 
@@ -13,60 +14,101 @@
   background-color: #fdfff8;
 }
 
-.card-header{
-    background-color: #a0a599;
+.card-header {
+  background-color: #a0a599;
 }
 
-table.dataTable > thead > tr > th:not(.sorting_disabled),
-table.dataTable > thead > tr > td:not(.sorting_disabled) {
-    padding-right: 13px !important;
+table.dataTable>thead>tr>th:not(.sorting_disabled),
+table.dataTable>thead>tr>td:not(.sorting_disabled) {
+  padding-right: 13px !important;
 }
 
 .btn-del {
-    background: none;
-    margin-left: 12px;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    color: inherit;
-    &:hover{
-    color: #6a6e66;
-    }
-}
-
-.a-edit{
+  background: none;
+  margin-left: 12px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
   color: inherit;
-    &:hover{
+
+  &:hover {
     color: #6a6e66;
-    }
+  }
 }
 
-.max-width1200{
+.a-edit {
+  color: inherit;
+
+  &:hover {
+    color: #6a6e66;
+  }
+}
+
+
+.a-reset {
+  color: inherit;
+  text-decoration: none;
+
+  &:hover {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+
+
+.max-width1200 {
   max-width: 1200px;
 }
 
-.max-width800{
+.max-width800 {
   max-width: 800px;
 }
 
-.col-1 { width: 80px; }
-.col-2 { width: 240px; }
-.col-3 { width: 140px; }
-.col-4 { width: 140px; }
-.col-5 { width: 120px; }
-.col-6 { width: 120px; }
-.col-7 { width: 110px; }
-.col-8 { width: 250px; }
-.col-9 { width: 100px; }
-
-.w-150{
-  width: 150px;
+.col-1 {
+  width: 80px;
 }
 
-.w-250{
+.col-2 {
+  width: 240px;
+}
+
+.col-3 {
+  width: 140px;
+}
+
+.col-4 {
+  width: 140px;
+}
+
+.col-5 {
+  width: 120px;
+}
+
+.col-6 {
+  width: 120px;
+}
+
+.col-7 {
+  width: 110px;
+}
+
+.col-8 {
   width: 250px;
 }
 
-.gap-8{
+.col-9 {
+  width: 100px;
+}
+
+.w-150 {
+  width: 150px;
+}
+
+.w-250 {
+  width: 250px;
+}
+
+.gap-8 {
   gap: 8px;
 }
