--- a/coupons/css/mycss.css
+++ b/coupons/css/mycss.css
@@ -4,14 +4,25 @@
   --cardhead:#a0a599;
 } */
 
-.h6, h6 {
-    font-size: 1.1rem;
+.h6,
+h6 {
+  font-size: 1.1rem;
 }
 
+  /* new */
 .bg-menu {
   background-color: #719a8b;
+  background-image: url(../../img/bar-bg.jpg);
+  background-position: calc(100%) calc(100% + 10px);
   background-size: cover;
+  background-repeat: no-repeat;
+  mix-blend-mode: multiply;
 }
+
+.logo{
+  width: 63%;
+}
+/* new end */
 
 #wrapper #content-wrapper {
   background-color: #fdfff8;
@@ -137,50 +148,50 @@ tbody tr:nth-of-type(odd) {
 
 
 .badge-green {
-    color: #fff;
-    background-color: #719a8b;
+  color: #fff;
+  background-color: #719a8b;
 }
 
 .badge-blue {
-    color: #fff;
-    background-color: #718bc5;
+  color: #fff;
+  background-color: #718bc5;
 }
 
 
 
 /* btn-outline-secondary */
 .btn-outline-secondary {
-    color: #75ab97;
-    border-color: #75ab97;
+  color: #75ab97;
+  border-color: #75ab97;
 }
 
 .btn-outline-secondary:not(:disabled):not(.disabled).active,
 .btn-outline-secondary:not(:disabled):not(.disabled):active,
-.show > .btn-outline-secondary.dropdown-toggle {
-    color: #fff;
-    background-color: #4f8c76;
-    border-color: #4f8c76;
+.show>.btn-outline-secondary.dropdown-toggle {
+  color: #fff;
+  background-color: #4f8c76;
+  border-color: #4f8c76;
 }
 
-.btn-check:checked + .btn-outline-secondary,
+.btn-check:checked+.btn-outline-secondary,
 .btn-outline-secondary.active {
-    background-color: #75ab97; 
-    color: white; 
-    border-color: #75ab97;
+  background-color: #75ab97;
+  color: white;
+  border-color: #75ab97;
 }
 
 /* 一般 hover */
-.btn-check + .btn-outline-secondary:hover {
-    color: #4f8c76;
-    background-color: #fff;
-    border-color: #4f8c76;
+.btn-check+.btn-outline-secondary:hover {
+  color: #4f8c76;
+  background-color: #fff;
+  border-color: #4f8c76;
 }
 
 /* 被選中時 hover → 維持選中樣式 */
-.btn-check:checked + .btn-outline-secondary:hover {
-    background-color: #75ab97;
-    color: white;
-    border-color: #75ab97;
+.btn-check:checked+.btn-outline-secondary:hover {
+  background-color: #75ab97;
+  color: white;
+  border-color: #75ab97;
 }
 
 
@@ -188,37 +199,37 @@ tbody tr:nth-of-type(odd) {
 
 /* btn-outline-primary */
 .btn-outline-primary {
-    color: #7593d5; 
-    border-color: #7593d5; 
+  color: #7593d5;
+  border-color: #7593d5;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .btn-outline-primary:not(:disabled):not(.disabled):active,
-.show > .btn-outline-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #5b7abd;
-    border-color: #5b7abd;
+.show>.btn-outline-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #5b7abd;
+  border-color: #5b7abd;
 }
 
-.btn-check:checked + .btn-outline-primary,
+.btn-check:checked+.btn-outline-primary,
 .btn-outline-primary.active {
-    background-color: #7593d5; 
-    color: white; 
-    border-color: #7593d5;
+  background-color: #7593d5;
+  color: white;
+  border-color: #7593d5;
 }
 
 /* 一般 hover */
-.btn-check + .btn-outline-primary:hover {
-    color: #5b7abd;
-    background-color: #fff;
-    border-color: #5b7abd;
+.btn-check+.btn-outline-primary:hover {
+  color: #5b7abd;
+  background-color: #fff;
+  border-color: #5b7abd;
 }
 
 /* 被選中時 hover → 維持選中樣式 */
-.btn-check:checked + .btn-outline-primary:hover {
-    background-color: #7593d5;
-    color: white;
-    border-color: #7593d5;
+.btn-check:checked+.btn-outline-primary:hover {
+  background-color: #7593d5;
+  color: white;
+  border-color: #7593d5;
 }
 
 
@@ -227,93 +238,93 @@ tbody tr:nth-of-type(odd) {
 
 /* btn-outline-success */
 .btn-outline-success {
-    color: #6a7c5d; 
-    border-color: #6a7c5d;
-    background-color: #fdfff8;
-    
-    &:hover{
-    color: #556947; 
+  color: #6a7c5d;
+  border-color: #6a7c5d;
+  background-color: #fdfff8;
+
+  &:hover {
+    color: #556947;
     border-color: #556947;
     background-color: #fdfff8;
-    }
+  }
 }
 
 .btn-outline-success:not(:disabled):not(.disabled).active,
 .btn-outline-success:not(:disabled):not(.disabled):active,
-.show > .btn-outline-success.dropdown-toggle {
-    color: #fff;
-    background-color: #949d8d;
-    border-color: #949d8d;
+.show>.btn-outline-success.dropdown-toggle {
+  color: #fff;
+  background-color: #949d8d;
+  border-color: #949d8d;
 }
 
 .btn-outline-success:not(:disabled):not(.disabled).active:focus,
 .btn-outline-success:not(:disabled):not(.disabled):active:focus,
-.show > .btn-outline-success.dropdown-toggle:focus {
-    box-shadow: none;
+.show>.btn-outline-success.dropdown-toggle:focus {
+  box-shadow: none;
 }
 
 .btn-outline-success.focus,
 .btn-outline-success:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 
 /* btn-secondary */
 .btn-secondary {
-    color: #fdfff8; 
-    border-color: #949d8d;
-    background-color: #949d8d;
-    
-    &:hover{
-    color: #fdfff8; 
+  color: #fdfff8;
+  border-color: #949d8d;
+  background-color: #949d8d;
+
+  &:hover {
+    color: #fdfff8;
     border-color: #828f79;
     background-color: #828f79;
-    }
+  }
 }
 
 .btn-secondary:not(:disabled):not(.disabled).active,
 .btn-secondary:not(:disabled):not(.disabled):active,
-.show > .btn-secondary.dropdown-toggle {
-    color: #fdfff8;
-    background-color: #828f79;
-    border-color: #828f79;
+.show>.btn-secondary.dropdown-toggle {
+  color: #fdfff8;
+  background-color: #828f79;
+  border-color: #828f79;
 }
 
 .btn-secondary.focus,
 .btn-secondary:focus {
-    color: #fff;
-    background-color: #949d8d;
-    border-color: #949d8d;
+  color: #fff;
+  background-color: #949d8d;
+  border-color: #949d8d;
 }
 
 
 .btn-secondary:not(:disabled):not(.disabled).active:focus,
 .btn-secondary:not(:disabled):not(.disabled):active:focus,
-.show > .btn-secondary.dropdown-toggle:focus {
-    box-shadow: none;
+.show>.btn-secondary.dropdown-toggle:focus {
+  box-shadow: none;
 }
 
 .btn-secondary.focus,
 .btn-secondary:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 
 .input-group-btn {
-    display: flex;
-    align-items: center;
-    padding: .375rem .75rem;
-    margin-bottom: 0;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #fdfff8;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #71b9c4;
-    border: 1px solid #d1d3e2;
-    border-radius: .35rem;
-  }
+  display: flex;
+  align-items: center;
+  padding: .375rem .75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fdfff8;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #71b9c4;
+  border: 1px solid #d1d3e2;
+  border-radius: .35rem;
+}
 
 
 
@@ -325,14 +336,14 @@ tbody tr:nth-of-type(odd) {
 
 
 .page-item.active .page-link {
-    z-index: 3;
-    color: #fff;
-    background-color: #6f9b8c;
-    border-color: #6f9b8c;
+  z-index: 3;
+  color: #fff;
+  background-color: #6f9b8c;
+  border-color: #6f9b8c;
 }
 
 .page-link {
-    color: #6f9b8c;
+  color: #6f9b8c;
 }
 
 .max-width1200 {
